Fixed greater max width for hiding navbar when on small screen in v5.0

--- a/v5.0/style.css
+++ b/v5.0/style.css
@@ -908,7 +908,7 @@ body {
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
     .label-navbar-toggle {
         display: flex;
     }
